# risuppu

./: Cargo.toml  README.md  hello.risp
risuppu-core/: Cargo.toml
risuppu-core/src/: lib.rs  semantic.rs  sexp.rs
risuppu-core/src/semantic/: env.rs  frame.rs  module.rs
risuppu-core/src/sexp/: iter.rs  macros.rs  parse.rs  pattern.rs  rustfn.rs  sexp_macro.rs
risuppu-repl/: Cargo.toml
risuppu-repl/src/: arg.rs  main.rs
risuppu-std/: Cargo.toml
risuppu-std/risp-src/: arithmetic.risp  bool.risp  class.risp  function.risp  list.risp  string.risp  tagged.risp
risuppu-std/src/: lib.rs
risuppu-std/src/arithmetic/: comp.rs  divide.rs  minus.rs  mod.rs  modular.rs  multiply.rs  plus.rs
risuppu-std/src/base/: and_then.rs  cond.rs  do.rs  let.rs  match.rs  mod.rs  seq.rs
risuppu-std/src/bool/: and.rs  mod.rs  not.rs  or.rs
risuppu-std/src/list/: flat_map.rs  fold.rs  map.rs  mod.rs
risuppu-std/src/sequence/: and_then.rs  do.rs  let.rs  mod.rs
risuppu-std/src/string/: concat.rs  mod.rs
scripts/: apply-nil.risp  church.risp  fact.risp
src/: lib.rs
