[package]
name = "risuppu"
version = "0.1.3"
edition = "2021"

[dependencies]
risuppu-core = { path = "./risuppu-core" }
risuppu-std = { path = "./risuppu-std" }

[workspace]
members = [
    "risuppu-core",
    "risuppu-repl",
    "risuppu-std",
]
resolver = "2"

[workspace.dependencies]
gc = { version = "0.5.0", features = ["derive"] }
