[package]
name = "risuppu-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risuppu = { path = "../risuppu-core/" }
risuppu-std = { path = "../risuppu-std/", default-features = false }
rustyline = "13.0.0"
clap = { version = "4.4", features = ["derive", "env"] }

[features]
default = ["string", "arithmetic", "list"]
string = ["risuppu-std/string"]
arithmetic = ["risuppu-std/arithmetic"]
list = ["risuppu-std/list"]
