[package]
name = "risuppu-std"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
risuppu = { path = "../risuppu-core/", package = "risuppu-core" }
paste = { version = "1" }

[features]
default = ["arithmetic", "string", "bool", "list"]
arithmetic = []
string = []
bool = []
list = []
